<resources>
    <string name="app_name">Keeper</string>
    <string name="skip">SKIP</string>
    <string name="back">BACK</string>
    <string name="next">NEXT</string>
    <string name="manage_your_tasks_title">Manage your tasks</string>
    <string name="manage_your_tasks_description">You can easily manage all of your daily tasks in Keeper for free</string>
    <string name="create_daily_routine_title">Create daily routine</string>
    <string name="create_daily_routine_description">In Keeper you can create your personalized routine to stay productive</string>
    <string name="organize_your_tasks_title">Organize your tasks</string>
    <string name="organize_your_tasks_description">You can organize your daily tasks my adding your tasks into separate categories</string>
    <string name="welcome_title">Welcome to Keeper</string>
    <string name="welcome_description">Please login to your account or create new account to continue</string>
    <string name="login">LOGIN</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="log_in_small">Login</string>
    <string name="email_title">Email</string>
    <string name="email_hint">Enter your Email</string>
    <string name="password_title">Password</string>
    <string name="password_hint">Enter Your Password</string>
    <string name="password_confirm">Confirm Your Password</string>
    <string name="google_login">Login with Google</string>
    <string name="facebook_login">Login with Facebook</string>
    <string name="github_login">Login with Github</string>
    <string name="no_account">Don\'t have an account? </string>
    <string name="register">Register</string>
    <string name="or">or</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reg_with_google">Register with Google</string>
    <string name="reg_with_facebook">Register with Facebook</string>
    <string name="reg_with_github">Register with Github</string>
    <string name="have_acc">Already have an account?</string>
    <string name="Index">Index</string>
    <string name="Calendar">Calendar</string>
    <string name="Focus">Focus</string>
    <string name="Profile">Profile</string>
    <string name="today">What do you want to do today?</string>
    <string name="add_task">Tap + to add Tasks</string>
    <string name="index">Index</string>
    <string name="add_task_title">Add Task</string>
    <string name="task_title">Your Task Title</string>
    <string name="task_description">Your Task\'s Description</string>
    <string name="task_priority_title">Task Priority</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="cancel">Cancel</string>
    <string name="set_priority">Set Priority</string>
    <string name="choose_category">Choose Category</string>
    <string name="grocery">Grocery</string>
    <string name="work">Work</string>
    <string name="sport">Sport</string>
    <string name="design">Design</string>
    <string name="university">University</string>
    <string name="social">Social</string>
    <string name="music">Music</string>
    <string name="health">Health</string>
    <string name="movie">Movie</string>
    <string name="home">home</string>
    <string name="add_category">Add Category</string>
    <string name="t_time">Task Time</string>
    <string name="t_cat">Task Category</string>
    <string name="t_priority">Task Priority</string>
    <string name="t_delete">Delete Task</string>
    <string name="e_task_title">Edit Your Task</string>
    <string name="edit">Edit</string>
    <string name="confirm">Confirm</string>
    <string name="r_u_sure">Are you sure?</string>
    <string name="unrecoverable">You may not be able to recover this task</string>

    <string name="profile_title">Profile</string>
    <string name="settings_title">Settings</string>
    <string name="setting_app">App Settings</string>
    <string name="account_title">Account</string>
    <string name="change_acc_name">Change account name</string>
    <string name="change_acc_pass">Change account password</string>
    <string name="change_acc_img">Change account image</string>
    <string name="logout_button">Logout</string>
    <string name="profile_image">Profile Image</string>
    <string name="settings_image">Settings Image</string>
    <string name="password_image">Password Image</string>
    <string name="camera">Camera</string>


    <string name="enter_new_acc_name">Enter new user name</string>

    <string name="enter_old_acc_pass">Enter old password</string>
    <string name="enter_new_acc_pass">Enter new password</string>
    <string name="confirm_new_acc_pass">Re-enter new password</string>

    </resources>