<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <TextView
        android:id="@+id/task_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_category"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginTop="7dp"
        android:background="@color/dark_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/task_category" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.357"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/priority_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:checkable="true"
            android:drawableTop="@drawable/grocery"
            android:drawablePadding="5dp"
            android:text="@string/grocery"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:chipStrokeColor="@android:color/transparent"></com.google.android.material.chip.Chip>

        <com.google.android.material.chip.Chip
            android:id="@+id/priority_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:checkable="true"
            android:drawableTop="@drawable/work"
            android:drawablePadding="5dp"
            android:text="@string/work"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:chipStrokeColor="@android:color/transparent"></com.google.android.material.chip.Chip>

        <com.google.android.material.chip.Chip
            android:id="@+id/priority_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:checkable="true"
            android:drawableTop="@drawable/sport"
            android:drawablePadding="5dp"
            android:text="@string/sport"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:chipStrokeColor="@android:color/transparent"></com.google.android.material.chip.Chip>

        <com.google.android.material.chip.Chip
            android:id="@+id/priority_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:checkable="true"
            android:drawableTop="@drawable/design"
            android:drawablePadding="5dp"
            android:text="@string/design"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:chipStrokeColor="@android:color/transparent"></com.google.android.material.chip.Chip>

        <com.google.android.material.chip.Chip
            android:id="@+id/priority_five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:checkable="true"
            android:drawableTop="@drawable/university"
            android:drawablePadding="5dp"
            android:text="@string/university"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:chipStrokeColor="@android:color/transparent"></com.google.android.material.chip.Chip>

        <com.google.android.material.chip.Chip
            android:id="@+id/priority_six"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:checkable="true"
            android:drawableTop="@drawable/social"
            android:drawablePadding="5dp"
            android:text="@string/social"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:chipStrokeColor="@android:color/transparent"></com.google.android.material.chip.Chip>

        <com.google.android.material.chip.Chip
            android:id="@+id/priority_seven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:checkable="true"
            android:drawableTop="@drawable/music"
            android:drawablePadding="5dp"
            android:text="@string/music"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:chipStrokeColor="@android:color/transparent"></com.google.android.material.chip.Chip>

        <com.google.android.material.chip.Chip
            android:id="@+id/priority_eight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:checkable="true"
            android:drawableTop="@drawable/health"
            android:drawablePadding="5dp"
            android:text="@string/health"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:chipStrokeColor="@android:color/transparent"></com.google.android.material.chip.Chip>

        <com.google.android.material.chip.Chip
            android:id="@+id/priority_nine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:checkable="true"
            android:drawableTop="@drawable/movie"
            android:drawablePadding="5dp"
            android:text="@string/movie"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:chipStrokeColor="@android:color/transparent"></com.google.android.material.chip.Chip>

        <com.google.android.material.chip.Chip
            android:id="@+id/priority_ten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:checkable="true"
            android:drawableTop="@drawable/home"
            android:drawablePadding="5dp"
            android:text="@string/home"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:chipStrokeColor="@android:color/transparent"></com.google.android.material.chip.Chip>

    </com.google.android.material.chip.ChipGroup>

</androidx.constraintlayout.widget.ConstraintLayout>